@@ -2,8 +2,8 @@
 .libs
 *.o
 *.a
-*.glade2p
-*.glade2.bak
+*.gladep
+*.glade.bak
 seahorse
 Makefile
 Makefile.in
