@@ -1,7 +1,14 @@
+2003-04-09  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* seahorse-import:
+	* seahorse-export:
+	Added clipboard functionality
+
 2003-04-05  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-context: Refactored key loading to use thread pools and
-	multiple contexts for listing.
+	multiple contexts for listing, updated ::keys_added to use new code
+	* seahorse-key-op: Bug fixes in ::set_trust, ::set_disabled, ::generate
 
 2003-04-04  Jacob Perkins  <jap1@users.sourceforge.net>
 
